force-app/main/default/objects/Subscriptions_Late_Billing__c/Subscriptions_Late_Billing__c.object-meta.xml
<CustomObject>
    <label>Subscriptions Late Billing</label>
    <nameField>
        <label>Subscriptions Late Billing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subscriptions Late Billings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>