force-app/main/default/objects/Subscriptions_Late_Billing__c/fields/ACV_US__c.field-meta.xml
<CustomField>
    <fullName>ACV_US__c</fullName>
    <label>ACV US</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>