force-app/main/default/objects/Subscriptions_Late_Billing__c/fields/Bill_to_ROR_Nbr__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_ROR_Nbr__c</fullName>
    <label>Bill To ROR Nbr</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>