force-app/main/default/objects/Subscriptions_Late_Billing__c/fields/Order_FUA_Site_Nbr__c.field-meta.xml
<CustomField>
    <fullName>Order_FUA_Site_Nbr__c</fullName>
    <label>Order FUA Site Nbr</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>