force-app/main/default/objects/Subscriptions_Late_Billing__c/fields/Quote_Number__c.field-meta.xml
<CustomField>
    <fullName>Quote_Number__c</fullName>
    <label>Quote Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>