force-app/main/default/objects/Subscriptions_Late_Billing__c/fields/Renewal_Term_Period_Type__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Term_Period_Type__c</fullName>
    <label>Renewal Term Period Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>