force-app/main/default/objects/Subscriptions_Late_Billing__c/fields/Ship_To_ROR_Nbr__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_ROR_Nbr__c</fullName>
    <label>Ship To ROR Nbr</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>