force-app/main/default/objects/Subscriptions_Late_Billing__c/fields/Subscription_Number__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Number__c</fullName>
    <label>Subscription Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>